# final-capstone-project-agentic-ai-invoice_processing_agent

./: .gitignore  Project.ipynb  README.md  main.py  pyproject.toml  requirements.txt
agents/: approval_agent.py  extraction_agent.py  fraud_agent.py  validation_agent.py
services/: groq_service.py  ocr_service.py
tests/: test_groq.py  test_ocr.py
