[project]
name = "invoice-intelligence-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.1",
    "crewai>=1.14.7",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "langchain>=1.3.7",
    "langgraph>=1.2.4",
    "pandas>=3.0.3",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.49.0",
]
